# form

./: .env.example  .gitignore  LICENSE  README.md  db.kv-shm  db.kv-wal  deno.jsonc  deps.ts  env.ts  form_form.html  form_form.py  forms.json.example  forms.ts  generate_question_type.py  html_util.py  main.py  main.ts  oauth2.py  oauth2.ts  package-lock.json  package.json  pyproject.toml  render_form.py
.github/workflows/: check.yaml
backend/: main.ts
discord/: webhook.py
form/: __init__.py  form.py  form_database.py  form_form.css  form_form.js  form_pydantic.py  in_memory_form_database.py  json_form_database.py  pickle_form_database.py  render.py  render_form_form_html.py  render_form_html.py
response/: pickle_response_database.py  response.py  response_database.py
src/: app.d.ts  app.html  global.css  hooks.server.ts
src/lib/components/: availability_question_input.svelte  boolean_question_input.svelte  checkboxQuestion.svelte  checkbox_question_input.svelte  color_question_input.svelte  date_question_input.svelte  datetime_question_imput.svelte  demo_form.svelte  form.svelte  form_editor.svelte  number_question_input.svelte  question_input.svelte  select_question_input.svelte  single_text_select_question_input.svelte  singletextselect_question_input.svelte  text_question_input.svelte  textarea_question_input.svelte  time_question_input.svelte  timezone_question_input.svelte
src/routes/: +layout.server.ts  +layout.svelte  +page.svelte
static/: edit_form_page.css  edit_form_page.js  forms.js  global.css  import_map.json  question_type.json
(+110 files in other folders)
