[tool.poetry]
name = "form"
version = "0.1.0"
description = ""
authors = ["EthanThatOneKid <31261035+EthanThatOneKid@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
